--- a/css/StyleRegister.css
+++ b/css/StyleRegister.css
@@ -1,188 +1,65 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+@font-face{
+    font-family:'FontMain';
+    src: url('../DMSans/DMSans-Regular.ttf')
+}
 
 body{
-    font-family: "DM Sans", sans-serif;
-    padding: 0;
-    margin: 0;
+    font-family: 'FontMain';
 }
 
-.reg{
-    position: absolute;
-    width: 76.12%;
-    height: 6.8359375%; 
-    left: 5.278%;
-    top: 73.828125%;
+.phone-bg{
+    background-color: hsl(41, 100%, 80%);
 }
 
-.usernameinput{
-    position:absolute;
-    width: 76.12%;
-    height: 10.64453125%;
-    left: 5.278%;
-    top: 45.99609375%;
+#rgstr-btn{
+    width: 100%;
 }
 
-.passwordinput{
-    position:absolute;
-    width: 76.12%;
-    height: 10.64453125%;
-    left: 5.278%;
-    top: 58.69140625%;
-}
-
-.emailinput{
-    position:absolute;
-    width: 76.12%;
-    height: 10.64453125%;
-    left: 5.278%;
-    top: 33.30078125%;
-}
-
-.HaveAnAccount{
-    position:absolute;
-    width: 45,672%;
-    height: 2.24609375%;
-    left: 5.278%;
-    top: 80.17578125%;
-
-}
-
-.TulisanHaveAnAccount{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 100%;
-    text-align: left;
-    color: #000000;
-}
-
-.TulisanLogIn{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height:100%;
-    color: #1B3BAE;
+.lgn-link{
     text-decoration: none;
 }
 
-.kanan{
-    position:absolute;
-    background: #FFC448;
-    width: 50%;
-    left: 50%;
-    top:0%;
-    bottom:0%;
+.bg-rgstr-form{
+    background-color: #EADBA2;
+    border-radius: 20px;
 }
 
-.TulisanPelengkap{
-    position:absolute;
-    width: 52.9167%;
-    height: 16.50390625%;
-    left: 23.54167%;
-    top: 4%;
+.bg-card-rgstr{
+    background-color: #f88d32;
+    border-radius: 20px;
 }
 
-.Welcome{
-    font-style:normal;
-    font-weight:500;
-    font-size: 64px;
-    line-height: 49.112%;
-    text-align: center;
-    color: #303030;
-}
-
-.Please{
-    font-style:normal;
-    font-weight: normal;
-    font-size: 48px;
-    line-height: 37.5%;
-    text-align: center;
-    color: #303030;
-}
-
-.penghias{
-    position: absolute;
-    width: 25%;
-    height: 45%;
-    top: 25.78125%;
-    left: 10.625%;
-}
-
-.PenghiasRegister{
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-}
-
-input[type=text]{
-    width: 100%;
-    height: 64.22%;
-    background: #EADBA2;
-    border-color: transparent;
-    border-radius:20px;
-    font-size: 22px;
-}
-  
-input[type=password]{
-    width: 100%;
-    height: 64.22%;
-    background: #EADBA2;
-    border-color: transparent;
-    border-radius:20px;
-    font-size: 22px;
-}
-
-input[type=submit]{
-      width: 101%;
-      height:64.19px;
-      background: #7AB5FB;
-      border-color: transparent;
-      border-radius:20px;
-      font-size: 22px;
-      color: #F9F8F4;
-      font-weight: bold;
-}
-
-#TulisanUsername{
-    width: 7.78%;
-    height: 3.02734375%;
-    font-size: 0.8467cm;
-    line-height: 3.02734375%;
-    font-style: normal;
-    font-weight: normal;
-}
-
-#TulisanPassword{
-    width: 7.3612%;
-    height: 2.15278%;
-    font-size: 0.8467cm;
-    line-height: 3.02734375%;
-    font-style: normal;
-    font-weight: normal;
-}
-
-#TulisanEmail{
-    width: 4.167%;
-    height: 3.02734375%;
-    font-size: 0.8467cm;
-    line-height: 3.02734375%;
-    font-style: normal;
-    font-weight: normal;
-}
-
-
-
-@media only screen and (max-width: 1408px){
-    .penghias{
+@media only screen and (min-width: 1200px){
+    .phone{
         display: none;
     }
 
-    .TulisanPelengkap{
-        display: none;
+    .desktop{
+        background: linear-gradient(
+            90deg,
+            #FFFFFF 0%,
+            #FFFFFF 50%,
+            #FFC448 50%,
+            #FFC448 100%
+        );
     }
 
-    .kanan{
-        left: 0%;
-        width:100%;
+    .img-penghias{
+        width: 500px;
+        height: 500px;
+    }
+
+    .bg-rgstr-form-desktop{
+        background-color: #EADBA2;
     }
 }
+
+@media only screen and (max-width: 1200px){
+    .desktop-laptop{
+        display: none;
+    }
+}
+
+
+
+
