--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+
+body{
+    font-family: 'DM Sans', sans-serif;
+    background-color: #fcfcfc;
+}
+
 .nav-link{
     color: #14416b;
     font-size: 20px;
@@ -14,7 +21,7 @@
     font-size: 20px;
 }
 .imgOne img {
-    width: 400px;
+    width: 95%;
     background-color: #14416b;
     border-radius: 30px;
 }
@@ -43,6 +50,37 @@
     border-radius: 12px;
 
 }
-.row{
-    gap: 10px;
+
+.hvr-underline-from-center{
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
 }
+  
+.hvr-underline-from-center:before {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      left: 51%;
+      right: 51%;
+      bottom: 0;
+      background: #2098D1;
+      height: 4px;
+      -webkit-transition-property: left, right;
+      transition-property: left, right;
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-timing-function: ease-out;
+      transition-timing-function: ease-out;
+}
+    
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+      left: 0;
+      right: 0;
+}
+
+  
